# ere

./: Cargo.toml  README.md
.github/workflows/: test-zkvm-miden.yml
crates/ere-cli/: Cargo.toml
crates/ere-cli/src/: main.rs
crates/ere-dockerized/: build.rs
crates/ere-dockerized/src/: input.rs  lib.rs
crates/ere-miden/: Cargo.toml  build.rs
crates/ere-miden/src/: compile.rs  error.rs  input.rs  lib.rs
crates/zkvm/miden/src/: zkvm.rs
docker/miden/: Dockerfile
scripts/sdk_installers/: install_miden_sdk.sh
tests/miden/basic/: basic.masm
tests/miden/fib/: fib.masm
